--- a/templates/resume.ejs
+++ b/templates/resume.ejs
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= personalInfo.name %> - Full Stack Engineer & DevOps Specialist</title>
+    <title><%= personalInfo.name %> - <%= personalInfo.name %></title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            /* line-height: 1.1; */
             color: #333;
             width: 900px;
             margin: 0 auto;
@@ -27,32 +26,29 @@
             border-bottom: 1px solid #bdc3c7;
             padding-bottom: 5px;
         }
-        h3 {
-            font-size: 16px;
-            margin-bottom: 5px;
-        }
         .contact-info {
             margin-bottom: 25px;
-             border-bottom: 2px solid #3498db;
+            border-bottom: 2px solid #3498db;
             padding-bottom: 10px;
         }
         .section {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         ul {
             padding-left: 20px;
             margin: 5px 0;
         }
-        .skills-line{
-            margin-top: 2px; line-height: 1.5; display: block;
-        }
         .skills-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            grid-template-columns: repeat(2, 1fr);
             gap: 5px;
         }
+        .skills-line {
+            margin-top: 2px;
+            line-height: 1.2;
+        }
         .experience-item, .project-item {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
         .experience-header, .project-header {
             margin-bottom: 5px;
@@ -61,9 +57,7 @@
             font-weight: bold;
         }
         .experience-company, .project-description {
-            /* font-style: italic; */
-            /* line-height: 1.2; */
-            /* display: block; */
+            font-style: italic;
         }
         .experience-date, .project-tech {
             color: #7f8c8d;
@@ -72,23 +66,29 @@
         .achievements {
             margin-top: 5px;
         }
+        .two-columns {
+            display: flex;
+            justify-content: space-between;
+        }
+        .two-columns > div {
+            flex: 0 0 48%;
+        }
     </style>
 </head>
 <body>
     <header>
-    <h1>
-        <%= personalInfo.name %>
-        <% if (typeof downloadable !== 'undefined' && downloadable) { %>
-            <button onclick="window.location.href='/download-pdf'">Download PDF</button>
-        <% } %>
-    </h1>
-    <!-- <p><strong><%= personalInfo.title %></strong></p> -->
-    <div class="contact-info">
-        <%= personalInfo.location %> | <%= personalInfo.phone %> | <%= personalInfo.email %> |
-        <a href="<%= personalInfo.githubURL %>">GitHub</a> | 
-        <a href="<%= personalInfo.linkedinURL %>">LinkedIn</a>
-    </div>
-</header>
+        <h1>
+            <%= personalInfo.name %>
+            <% if (typeof downloadable !== 'undefined' && downloadable) { %>
+                <button onclick="window.location.href='/download-pdf'">Download PDF</button>
+            <% } %>
+        </h1>
+        <div class="contact-info">
+            <%= personalInfo.location %> | <%= personalInfo.phone %> | <%= personalInfo.email %> |
+            <a href="<%= personalInfo.githubURL %>" target="_blank">GitHub</a> | 
+            <a href="<%= personalInfo.linkedinURL %>" target="_blank">LinkedIn</a>
+        </div>
+    </header>
 
     <section class="section">
         <h2>Professional Summary</h2>
@@ -97,52 +97,67 @@
 
     <section class="section">
         <h2>Technical Skills</h2>
-        <% Object.entries(technicalSkills).forEach(function([category, skills]) { %>
-            <p><strong><%= category %>:</strong> <br />  <span class="skills-line"><%= skills.join(', ') %></span></p>
-        <% }); %>
+        <div class="skills-grid">
+            <% Object.entries(technicalSkills).forEach(function([category, skills]) { %>
+                <div>
+                    <p><strong><%= category %>:</strong> <br /> <span class="skills-line"><%= skills.join(', ') %></span></p>
+                </div>
+            <% }); %>
+        </div>
     </section>
 
     <section class="section">
         <h2>Professional Experience</h2>
-        <% professionalExperience.forEach(function(job) { %>
-            <div class="experience-item">
-                <div class="experience-header">
-                    <span class="experience-title"><%= job.title %></span> - 
-                    <span class="experience-company"><%= job.company %>, <%= job.location %></span>
-                    <span class="experience-date"><%= job.startDate %> - <%= job.endDate %></span>
+        <div class="two-columns">
+            <% professionalExperience.forEach(function(job, index) { %>
+                <div class="experience-item">
+                    <div class="experience-header">
+                        <span class="experience-title"><%= job.title %></span> - 
+                        <span class="experience-company"><%= job.company %>, <%= job.location %></span>
+                        <span class="experience-date"><%= job.startDate %> - <%= job.endDate %></span>
+                    </div>
+                    <ul class="achievements">
+                        <% job.achievements.forEach(function(achievement) { %>
+                            <li><%= achievement %></li>
+                        <% }); %>
+                    </ul>
                 </div>
-                <ul class="achievements">
-                    <% job.achievements.forEach(function(achievement) { %>
-                        <li><%= achievement %></li>
-                    <% }); %>
-                </ul>
-            </div>
-        <% }); %>
+            <% if (index % 2 === 1) { %></div><div class="two-columns"><% } %>
+            <% }); %>
+        </div>
     </section>
 
     <section class="section">
         <h2>Notable Projects</h2>
-        <% notableProjects.forEach(function(project) { %>
-            <div class="project-item">
-                <div class="project-header">
-                    <span class="project-name"><%= project.name %></span> - 
-                    <span class="project-description"><%= project.description %></span>
+        <div class="two-columns">
+            <% notableProjects.forEach(function(project, index) { %>
+                <div class="project-item">
+                    <div class="project-header">
+                        <span class="project-name"><%= project.name %></span> - 
+                        <span class="project-description"><%= project.description %></span>
+                    </div>
+                    <ul>
+                        <% project.details?.forEach(function(detail) { %>
+                            <li><%= detail %></li>
+                        <% }); %>
+                    </ul>
                 </div>
-                <ul>
-                    <% project.details?.forEach(function(detail) { %>
-                        <li><%= detail %></li>
-                    <% }); %>
-                </ul>
-            </div>
-        <% }); %>
+            <% if (index % 2 === 1) { %></div><div class="two-columns"><% } %>
+            <% }); %>
+        </div>
     </section>
 
     <section class="section">
         <h2>Education</h2>
-        <% education.forEach(function(edu) { %>
-            <p><strong><%= edu.degree %></strong><br>
-            <%= edu.institution %> | <%= edu.startDate %> - <%= edu.endDate %></p>
-        <% }); %>
+        <div class="two-columns">
+            <% education.forEach(function(edu, index) { %>
+                <div>
+                    <p><strong><%= edu.degree %></strong><br>
+                    <%= edu.institution %> | <%= edu.startDate %> - <%= edu.endDate %></p>
+                </div>
+            <% if (index % 2 === 1) { %></div><div class="two-columns"><% } %>
+            <% }); %>
+        </div>
     </section>
 
     <section class="section">
