--- a/templates/resume.ejs
+++ b/templates/resume.ejs
@@ -1,179 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= personalInfo.name %> - <%= personalInfo.name %></title>
+    <title>
+        <%= personalInfo.name %>
+    </title>
     <style>
         body {
+            font-size: 12px;
+            max-width: 900px;
+            margin: 0 auto;
             font-family: Arial, sans-serif;
             color: #333;
-            width: 900px;
-            margin: 0 auto;
-            padding: 20px;
-            font-size: 14px;
         }
+
+        h1,
+        h2 {
+            color: #2c3e50;
+        }
+
+
+        h1,
+        h2,
+        h3,
+        p {
+            margin: 0px;
+            padding: 0px;
+        }
+        h3{
+            margin: 5px 0px;
+        }
+
+        h2 {
+            /* font-size: 18px; */
+            border-bottom: 1px solid #bdc3c7;
+            padding-bottom: 5px;
+            margin: 10px 0px;
+        }
+
         a {
             color: #3498db;
             text-decoration: none;
         }
-        h1, h2, h3 {
-            color: #2c3e50;
-            margin-bottom: 10px;
+
+        ul {
+            padding: 0px;
+            margin: 0px;
+            padding-left: 20px;
         }
-        h2 {
-            font-size: 18px;
+
+        li {
+            margin-bottom: 5px;
+        }
+        .contact-info{
             border-bottom: 1px solid #bdc3c7;
             padding-bottom: 5px;
         }
-        .contact-info {
-            margin-bottom: 25px;
-            border-bottom: 2px solid #3498db;
-            padding-bottom: 10px;
+
+        .technical-skills-group {
+            column-count: 2;
+            column-gap: 50px;
         }
-        .section {
-            margin-bottom: 15px;
-        }
-        ul {
-            padding-left: 20px;
-            margin: 5px 0;
-        }
-        .skills-grid {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            gap: 5px;
-        }
-        .skills-line {
-            margin-top: 2px;
-            line-height: 1.5;
-        }
-        .experience-item, .project-item {
-            margin-bottom: 10px;
-        }
-        .experience-header, .project-header {
-            margin-bottom: 5px;
-        }
-        .experience-title, .project-name {
-            font-weight: bold;
-        }
-        .experience-company, .project-description {
-            font-style: italic;
-        }
-        .experience-location{
-            font-size: 12px;
-            font-style: italic;
-            padding-left: 4px;
-        }
-        .experience-date, .project-tech {
-            color: #7f8c8d;
-            font-size: 12px;
-        }
-        .achievements {
-            margin-top: 5px;
-        }
-        .two-columns {
+        .experience-header{
             display: flex;
-            justify-content: space-between;
+            align-items: center;
         }
-        .two-columns > div {
-            flex: 0 0 48%;
+        .experience-header span{
+            margin: 0px 5px;
+            font-style: italic;
         }
     </style>
 </head>
+
 <body>
     <header>
         <h1>
             <%= personalInfo.name %>
-            <% if (typeof downloadable !== 'undefined' && downloadable) { %>
-                <button onclick="window.location.href='/download-pdf'">Download PDF</button>
-            <% } %>
+                <% if (typeof downloadable !=='undefined' && downloadable) { %>
+                    <button onclick="window.location.href='/download-pdf'">Download PDF</button>
+                    <% } %>
         </h1>
-        <div class="contact-info">
-            <%= personalInfo.location %> | <%= personalInfo.phone %> | <%= personalInfo.email %> |
-            <a href="https://<%= personalInfo.githubURL %>" target="_blank"><%= personalInfo.githubURL %></a> | 
-            <a href="https://<%= personalInfo.linkedinURL %>" target="_blank"><%= personalInfo.linkedinURL %></a>
-        </div>
+        <p class="contact-info">
+            <%= personalInfo.location %> |
+                <%= personalInfo.phone %> |
+                    <%= personalInfo.email %> |
+                        <a href="https://<%= personalInfo.githubURL %>" target="_blank">github.com/irfanali17899</a>
+                        |
+                        <a href="https://<%= personalInfo.linkedinURL %>"
+                            target="_blank">linkedin.com/in/irfanali17899</a>
+
+        </p>
     </header>
 
-    <section class="section">
+    <section>
         <h2>Professional Summary</h2>
-        <p><%= professionalSummary %></p>
+        <p>
+            <%= professionalSummary %>
+        </p>
     </section>
-
-    <section class="section">
+    <section>
         <h2>Technical Skills</h2>
-        <div class="skills-grid">
+        <ul class="technical-skills-group">
             <% Object.entries(technicalSkills).forEach(function([category, skills]) { %>
-                <div>
-                    <p><strong><%= category %>:</strong> <br /> <span class="skills-line"><%= skills.join(', ') %></span></p>
-                </div>
-            <% }); %>
-        </div>
+                <li>
+                    <h3>
+                        <%= category %>
+                    </h3>
+                    <%= skills.join(' ◦ ') %>
+                </li>
+                <% }) %>
+        </ul>
     </section>
 
-    <section class="section">
+    <section>
         <h2>Professional Experience</h2>
-        <div class="two-columns">
-            <% professionalExperience.forEach(function(job, index) { %>
-                <div class="experience-item">
+        <ul>
+            <% professionalExperience.forEach(function(job) { %>
+                <li>
                     <div class="experience-header">
-                        <span class="experience-title"><%= job.title %></span> -
-                        <span class="experience-company"><%= job.company %></span>
-                        <br>
-                        <span class="experience-location"><%= job.location %></span>
-                        <span class="experience-date"><%= job.startDate %> - <%= job.endDate %></span>
-                    </div>
-                    <ul class="achievements">
-                        <% job.achievements.forEach(function(achievement) { %>
-                            <li><%= achievement %></li>
-                        <% }); %>
-                    </ul>
-                </div>
-            <% if (index % 2 === 1) { %></div><div class="two-columns"><% } %>
-            <% }); %>
-        </div>
-    </section>
+                    <h3>
+                        <%= job.title %> 
+                    </h3>
+                    <span>
+                        -
+                        <%= job.company %>
+                    </span>
+                    -
+                    <span>
 
-    <section class="section">
-        <h2>Notable Projects</h2>
-        <div class="two-columns">
-            <% notableProjects.forEach(function(project, index) { %>
-                <div class="project-item">
-                    <div class="project-header">
-                        <span class="project-name"><%= project.name %></span> - 
-                        <span class="project-description"><%= project.description %></span>
+                        <%= job.location %> -
+                        <%= job.startDate %> - <%= job.endDate %>
+                    </span>
                     </div>
                     <ul>
-                        <% project.details?.forEach(function(detail) { %>
-                            <li><%= detail %></li>
-                        <% }); %>
+                        <% job.achievements.forEach(function(responsibility) { %>
+                            <li>
+                                <%= responsibility %>
+                            </li>
+                            <% }) %>
                     </ul>
-                </div>
-            <% if (index % 2 === 1) { %></div><div class="two-columns"><% } %>
-            <% }); %>
-        </div>
+                </li>
+                <% }) %>
+        </ul>
     </section>
-
-    <section class="section">
+    <section>
         <h2>Education & Certifications</h2>
-        <div class="two-columns">
-            <% education.forEach(function(edu, index) { %>
-                <div>
-                    <p><strong><%= edu.title %></strong><br>
-                    <%= edu.institution %> | <%= edu.startDate %> - <%= edu.endDate %></p>
-                </div>
-            <% if (index % 2 === 1) { %></div><div class="two-columns"><% } %>
-            <% }); %>
-        </div>
+        <ul>
+            <% education.forEach(function(edu) { %>
+                <li>
+                    <span>
+                        <%= edu.title %>
+                    </span>
+                    -
+                    <span>
+                        <%= edu.institution %>
+                    </span>
+                    <span>
+                        <%= edu.location %> -
+                            <%= edu.startDate %> - <%= edu.endDate %>
+                    </span>
+                </li>
+                <% }) %>
+        </ul>
     </section>
 
-    <section class="section">
+    <section>
         <h2>Professional Development</h2>
         <ul>
             <% professionalDevelopment.forEach(function(item) { %>
-                <li><%= item %></li>
-            <% }); %>
+                <li>
+                    <%= item %>
+                </li>
+                <% }); %>
         </ul>
     </section>
 </body>
+
 </html>
